# qspm

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  pylenium.json
.github/workflows/: build.yml  codeql-analysis.yml
img/: qspm.drawio
src/: Cargo.toml  lib.rs
tests/: test_ui.py
tools/: server.py  setup.sh
www/: index.html
www/css/: add.css  edit.css  password.css  raw.css  records.css  setup.css  style.css
www/js/: add.js  dropbox.js  edit.js  help.js  index.js  password.js  raw.js  records.js  setup.js  tabs.js  utils.js
